tests/fails/veclit2.t
import "compiler/liszt"
mesh = L.initMeshRelationsFromFile("examples/mesh.lmesh")

local vk = liszt_kernel(v in mesh.vertices)
	var x = {1, 2, true}
end
vk()
